<resources>
    <string name="app_name" translatable="false">IliasBuddy</string>
    <string name="main_activity_toolbar_action_open_ilias">Open Ilias</string>
    <string name="main_activity_toolbar_action_open_campus">Open C@mpus</string>
    <string name="main_activity_toolbar_options_action_about">About</string>
    <string name="main_activity_toolbar_options_action_developer_options">Developer options</string>
    <string name="main_activity_toolbar_options_action_settings" translatable="false">@string/settings_activity_toolbar_title</string>
    <string name="main_activity_toolbar_options_action_setup" translatable="false">@string/setup_activity_toolbar_title</string>
    <string name="main_activity_toolbar_options_action_share">Share</string>
    <string name="main_activity_floating_button_tooltip_refresh">Refresh</string>
    <string name="main_activity_toolbar_action_filter">Filter</string>
    <string name="main_activity_toolbar_action_filter_files">Files</string>
    <string name="main_activity_toolbar_action_filter_posts">Posts</string>
    <string name="main_activity_toolbar_action_dev_show_last_response">Show last server response</string>
    <string name="main_activity_toolbar_action_dev_clear_list">Clear list</string>
    <string name="main_activity_toolbar_action_dev_clear_first_element">Remove first element</string>
    <string name="main_activity_toolbar_action_dev_example_notification_single">Example notification (single)</string>
    <string name="main_activity_toolbar_action_dev_example_notification_multiple">Example notification (multiple)</string>
    <string name="main_activity_toolbar_action_dev_reset_to_first_launch">Reset to first launch</string>
    <string name="main_activity_show_last_response_title">Last response</string>
    <string name="main_activity_show_last_response_no_response">No recorded response found</string>
    <string name="main_activity_toolbar_action_dev_force_background_service">Force start background service</string>
    <string name="open_in_ilias">Open in Ilias</string>
    <string name="settings_activity_toolbar_title">Settings</string>
    <string name="settings_activity_pref_general_header">General</string>
    <string name="settings_activity_pref_general_header_summary">General settings</string>
    <string name="settings_activity_pref_general_display_campus_shortcut">Display C@mpus shortcut</string>
    <string name="settings_activity_pref_general_display_shortcut_description">Show entry in the action bar menu of the home screen of this app</string>
    <string name="settings_activity_pref_general_display_campus_shortcut_description" translatable="false">@string/settings_activity_pref_general_display_shortcut_description</string>
    <string name="settings_activity_pref_general_display_setup_shortcut_description" translatable="false">@string/settings_activity_pref_general_display_shortcut_description</string>
    <string name="settings_activity_pref_general_display_setup_shortcut">Display account shortcut</string>
    <string name="settings_activity_pref_general_display_dev_shortcut_description" translatable="false">@string/settings_activity_pref_general_display_shortcut_description</string>
    <string name="settings_activity_pref_general_display_dev_shortcut">Display developer options shortcut</string>
    <string name="settings_activity_pref_notifications_header">Notifications</string>
    <string name="settings_activity_pref_notifications_header_summary">Set background service, notification options, update frequency and more</string>
    <string name="settings_activity_pref_notifications_background_notifications">Background notifications</string>
    <string name="settings_activity_pref_notifications_background_notifications_summary">A service in the background will look in the specified frequency for private Ilias RSS feed updates which will trigger a notification</string>
    <string name="settings_activity_pref_notifications_frequency">Frequency of background checks</string>
    <string-array name="settings_activity_pref_notifications_frequency_titles">
        <item>Every minute</item>
        <item>Every 2 minutes</item>
        <item>Every 5 minutes</item>
        <item>Every 10 minutes</item>
        <item>Every 30 minutes</item>
        <item>Every hour</item>
        <item>Every 2 hours</item>
        <item>Every 6 hours</item>
        <item>Every 12 hours</item>
        <item>Every day</item>
    </string-array>
    <string-array name="settings_activity_pref_notifications_frequency_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
    </string-array>
    <string name="settings_activity_pref_general_retry_timeout_rss_feed">Retry timeout for Ilias RSS feed</string>
    <string name="settings_activity_pref_general_retry_timeout_rss_feed_description">Extend the retry timeout for fetching the Ilias RSS feed in case of a slow connection or a congested server (when you get multiple timeout errors increase this value)</string>
    <string-array name="settings_activity_pref_general_retry_timeout_rss_feed_titles">
        <item>Default (2.5s)</item>
        <item>x2 (5s)</item>
        <item>x4 (10s)</item>
        <item>x8 (20s)</item>
    </string-array>
    <string-array name="settings_activity_pref_general_retry_timeout_rss_feed_values" translatable="false">
        <item>2500</item>
        <item>5000</item>
        <item>10000</item>
        <item>20000</item>
    </string-array>
    <string name="settings_activity_pref_notifications_background_notifications_on_boot">Start background checks on boot</string>
    <string name="settings_activity_pref_notifications_background_notifications_on_boot_summary">Background service will be started on boot/reboot of the device</string>
    <string name="settings_activity_pref_notifications_notification_sound">Sound on new notification</string>
    <string name="settings_activity_pref_notifications_notification_sound_notification_silent">Silent</string>
    <string name="settings_activity_pref_notifications_notification_vibration">Vibrate on new notification</string>
    <string name="settings_activity_pref_notifications_notification_vibration_summary">The notification vibrates</string>
    <string name="settings_activity_pref_general_auto_update_check">Automatically check for updates</string>
    <string name="settings_activity_pref_general_auto_update_check_description">Every time the app gets started a check for new updates is silently done so that when there is an update so you are always up to date</string>
    <string name="setup_activity_toolbar_title">Account</string>
    <string name="setup_activity_toolbar_action_help_instructions">Help/Instructions</string>
    <string name="setup_activity_input_ilias_private_rss_feed_url">Private RSS feed URL</string>
    <string name="setup_activity_input_ilias_private_rss_feed_user_name">Private RSS feed user name</string>
    <string name="setup_activity_input_ilias_private_rss_feed_password">Private RSS feed password</string>
    <string name="setup_activity_input_ilias_private_rss_feed_url_is_invalid_message">Private Ilias RSS URL is not a valid URL</string>
    <string name="setup_activity_floating_button_tooltip_complete_setup">Complete setup</string>
    <string name="setup_activity_toolbar_action_help_instructions_popup_html_content"><![CDATA[<p>To use this service you need to visit Ilias and click on the orange <b>RSS</b> button to get to the <a href=\'https://ilias3.uni-stuttgart.de/ilias.php?view=0&col_side=right&block_type=pdnews&cmd=showFeedUrl&cmdClass=ilpdnewsblockgui&cmdNode=sh:6b:rv&baseClass=ilPersonalDesktopGUI#il_mhead_t_focus\'>Ilias news feed</a>.</p><p>From there you need to copy the private feed url and replace the <b>password</b> with a password you set in the <a href=\'https://ilias3.uni-stuttgart.de/ilias.php?view=0&col_side=right&block_type=pdnews&cmd=editSettings&cmdClass=ilpdnewsblockgui&cmdNode=sh:6b:rv&baseClass=ilPersonalDesktopGUI#il_mhead_t_focus\'>Ilias settings</a> (you get there by clicking the settings symbol at the top right of the same card you just clicked the orange RSS button.</p><p>Then insert the url in the first text field and your username (The name string in the url without any spaces) and your just set password.</p><p>Now to complete the setup click the check button at the bottom right.</p>]]></string>
    <string name="welcome_activity_button_right_next">NEXT</string>
    <string name="welcome_activity_button_left_skip">SKIP</string>
    <string name="welcome_activity_button_right_got_it">GOT IT</string>
    <string name="welcome_activity_slide_1_title">Welcome to the IliasBuddy app :)</string>
    <string name="welcome_activity_slide_1_description">Swipe left or click <i>NEXT</i> to learn more about this app or start instantly by clicking <i>SKIP</i></string>
    <string name="welcome_activity_slide_2_title">How the app works</string>
    <string name="welcome_activity_slide_2_description">After you enter your <b><i>private Ilias RSS feed-</i></b> URL, user name and password (<u><b>not your normal Ilias password!!!</b></u>) the app checks this feed regularly for you</string>
    <string name="welcome_activity_slide_3_title">Features</string>
    <string name="welcome_activity_slide_3_description">If a new entry was found the app shows you a notification - you can change vibration, sound and other features always in the settings</string>
    <string name="welcome_activity_slide_1_picture_description">Ilias® logo which (white rectangle with transparent Ilias® text at the bottom left) is used on the IliasBuddy app logo</string>
    <string name="welcome_activity_slide_3_picture_description">Phone that vibrates and has a speech bubble coming from it\'s center which contains a sound symbol</string>
    <string name="welcome_activity_slide_2_picture_description">Phone which has on it\'s display in the upper half a RSS symbol and on it\'s bottom half a download arrow pointing down</string>
    <string name="about_activity_description">This open source app downloads with your private Ilias RSS feed credentials your private Ilias RSS feed. It displays the feed entries in a searchable list, but can also - if enabled - check in the background for new entries and show notifications for them.</string>
    <string name="about_activity_version">Version</string>
    <string name="about_activity_check_for_new_version">Check for new version</string>
    <string name="about_activity_license">License</string>
    <string name="about_activity_license_text" translatable="false">MIT License\n\nCopyright © 2018 Niklas\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="search_title">Search for entries</string>
</resources>