<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.niklasm.iliasbuddy.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_info"
        android:summary="@string/settings_activity_pref_general_header_summary"
        android:title="@string/settings_activity_pref_general_header" />

    <header
        android:fragment="com.example.niklasm.iliasbuddy.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_settings_notifications"
        android:summary="@string/settings_activity_pref_notifications_header_summary"
        android:title="@string/settings_activity_pref_notifications_header" />

</preference-headers>
